# phase2

./: PLAN.md  default_x_authors.txt  following.txt  main.py  pyproject.toml  test.py  thread.py  x.py
pytorch_ai_scientist/: .gitignore  README.md  pyproject.toml
pytorch_ai_scientist/pytorch_scientist/: __init__.py  cli.py  config.py  dspy_programs.py  experiments.py  ideation.py  literature.py  pipeline.py  search_engine.py  search_space.py  social.py
pytorch_ai_scientist/pytorch_scientist/utils/: __init__.py  logging.py  persistence.py  timing.py
pytorch_ai_scientist/scripts/: run_discovery.py  run_full_pipeline.py
pytorch_ai_scientist/tests/: __init__.py  test_config.py  test_ideation.py  test_literature.py  test_search_engine.py  test_search_space.py  test_social.py  test_utils.py
